err/qbench.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/logger'...
Listing './lib/python3.5/site-packages/logger-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/qbench'...
Compiling './lib/python3.5/site-packages/qbench/benchmark_api.py'...
***   File "./lib/python3.5/site-packages/qbench/benchmark_api.py", line 119
    os.makedirs (resultsinfo, 0755)
                                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/qbench/qumulo_bench.py'...
***   File "./lib/python3.5/site-packages/qbench/qumulo_bench.py", line 560
    put (src, destdir, mode = 0755)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/qbench-3.0.1.egg-info'...
Listing './lib/python3.5/site-packages/qumulo'...
Listing './lib/python3.5/site-packages/qumulo/commands'...
Compiling './lib/python3.5/site-packages/qumulo/commands/ad.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/ad.py", line 24
    print ad.list_ad(conninfo, credentials)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/analytics.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/analytics.py", line 29
    print analytics.time_series_get(conninfo, credentials, args.begin_time)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/auth.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/auth.py", line 25
    print '%s\nUser %d is a member of following groups: %s' % (
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/cluster.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/cluster.py", line 28
    print cluster.list_node(conninfo, credentials, _args.node)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/dns.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/dns.py", line 29
    print dns.resolve(conninfo, credentials, args.ips)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/fs.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/fs.py", line 48
    print fs.read_fs_stats(conninfo, credentials)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/login.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/login.py", line 84
    print me
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/commands/network.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/network.py", line 67
    print network.modify_cluster_network_config(conninfo, credentials,
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/nfs.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/nfs.py", line 58
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/node_state.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/node_state.py", line 22
    print node_state.get_node_state(conninfo, credentials)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/quota.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/quota.py", line 34
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/commands/shutdown.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/shutdown.py", line 33
    print "The machine is restarting."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/commands/smb.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/smb.py", line 25
    print smb.smb_list_shares(conninfo, credentials)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/snapshot.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/snapshot.py", line 65
    print snapshot.create_snapshot(
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/support.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/support.py", line 25
    print support.get_config(conninfo, credentials)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/time_config.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/time_config.py", line 22
    print time_config.get_time(conninfo, credentials)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/unconfigured_node_operations.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/unconfigured_node_operations.py", line 22
    print node_operations.unconfigured(
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/upgrade.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/upgrade.py", line 41
    print upgrade.config_get(conninfo, credentials)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/commands/version.py'...
***   File "./lib/python3.5/site-packages/qumulo/commands/version.py", line 22
    print version(conninfo, credentials)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qumulo/lib'...
Compiling './lib/python3.5/site-packages/qumulo/lib/auth.py'...
***   File "./lib/python3.5/site-packages/qumulo/lib/auth.py", line 164
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qumulo/lib/log.py'...
***   File "./lib/python3.5/site-packages/qumulo/lib/log.py", line 37
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/lib/opts.py'...
***   File "./lib/python3.5/site-packages/qumulo/lib/opts.py", line 75
    print 'Cancelling the %s request' % command
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/lib/qq.py'...
***   File "./lib/python3.5/site-packages/qumulo/lib/qq.py", line 72
    print "\nCommand interrupted"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qumulo/lib/request.py'...
***   File "./lib/python3.5/site-packages/qumulo/lib/request.py", line 287
    raise e, None, sys.exc_info()[2]
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qumulo/rest'...
Listing './lib/python3.5/site-packages/qumulo_api-2.6.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
